--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <h1 class="main-header purple-font" id="id">This is sample text</h1>
-        <h2 class="purple-font">This is <span>beach</span></h2>
+        <h2 class="purple-font">This is <span class="span">beach</span></h2>
     </div>
 
 </body>
