Images and links

--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Including this link tag allows you to connect to your css style sheet-->
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="background">
-        <h1 class="main-header purple-font" id="id">This is sample text</h1>
-        <h2 class="purple-font">This is <span class="span">beach</span></h2>
+        <h1 class="main-header purple-font" id="id">William Li's Blogpost</h1>
+        <h2 class="purple-font"><span class="span"></span></h2>
     </div>
 
 </body>
+
+<img src="https://cdn.vox-cdn.com/thumbor/sYdtr-V4zFvhLzNOLeKOVQ-iGBY=/0x0:593x445/620x413/filters:focal(0x0:593x445):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/33126241/480924103.0.jpg" alt="Limes">
+<p>Expensive Limes</p><a href="https://www.youtube.com/watch?v=VsyvKC2TwrM">See why here</a>
+
+<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/queen-elizabeth-ii-waves-during-a-walk-about-around-windsor-news-photo-1636146247.jpg?crop=0.609xw:0.922xh;0.215xw,0.0316xh&resize=640:*" alt="Queen Elizabeth II">
+<p>Queen Elizabeth passes at 96 years</p><a href=""></a>
+
+<img src="https://www.apple.com/newsroom/images/product/iphone/standard/Apple-iPhone-14-iPhone-14-Plus-2up-purple-220907_inline.jpg.large.jpg" alt="Iphone 14">
+<p>Apple releases their newest line of Iphones</p><a href="https://www.youtube.com/watch?v=ehbmC1irQuY">Enjoy Apples Iphone 14 ad</a>
 
 </html>
