Finished Blog Post

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="background">
-        <h1 class="main-header">Food Related Stuff</h1>
-        <h2 class="black-font"> I am an avid food lover so here are some articles and videos regarding food</h2>
+        <h1>Food Related Posts</h1>
+        <h2> I am an avid food lover so here are some articles and videos regarding food</h2>
     </div>
 
     <div class="food">
